change swagger version and restart documentation
